tests/integration/snapshots/test__integration__cli_interface__default.snap
---
source: tests/integration/cli_interface.rs
info:
  program: moonup
  args:
    - default
    - "--help"
---
success: true
exit_code: 0
----- stdout -----
Set the default toolchain

Usage: moonup default [OPTIONS] [TOOLCHAIN]

Arguments:
  [TOOLCHAIN]  Toolchain version tag or channel name [latest, nightly, bleeding]

Options:
  -v, --verbose...  Increase logging verbosity
  -q, --quiet...    Decrease logging verbosity
  -h, --help        Print help

----- stderr -----
