tests/integration/snapshots/test__integration__cli_interface__help.snap
---
source: tests/integration/cli_interface.rs
info:
  program: moonup
  args:
    - "--help"
---
success: true
exit_code: 0
----- stdout -----
Moonup is a tool to manage multiple MoonBit installations.

If you find any bugs or have a feature request, please open an issue on
GitHub: https://github.com/chawyehsu/moonup/issues

Usage: moonup [OPTIONS] <COMMAND>

Commands:
  completions  Generate shell completions
  default      Set the default toolchain
  install      Install or update a MoonBit toolchain [alias: i]
  list         List installed and active toolchains [alias: ls]
  pin          Pin the MoonBit toolchain to a specific version
  run          Run a command with a specific toolchain [alias: x]
  self-update  Update Moonup to the latest version
  uninstall    Uninstall a MoonBit toolchain
  update       Update MoonBit toolchains [alias: u]
  which        Show the actual binary that will be run for a given command
  help         Print this message or the help of the given subcommand(s)

Options:
  -v, --verbose...  Increase logging verbosity
  -q, --quiet...    Decrease logging verbosity
  -h, --help        Print help
  -V, --version     Print version

----- stderr -----
