tests/integration/snapshots/test__integration__cli_interface__install.snap
---
source: tests/integration/cli_interface.rs
info:
  program: moonup
  args:
    - install
    - "--help"
---
success: true
exit_code: 0
----- stdout -----
Install or update a MoonBit toolchain

Usage: moonup install [OPTIONS] [TOOLCHAIN]

Arguments:
  [TOOLCHAIN]  Toolchain version tag or channel name [latest, nightly, bleeding]

Options:
      --list-available  List available channels
  -v, --verbose...      Increase logging verbosity
  -q, --quiet...        Decrease logging verbosity
  -h, --help            Print help

----- stderr -----
