tests/integration/snapshots/test__integration__cli_interface__show.snap
---
source: tests/integration/cli_interface.rs
info:
  program: moonup
  args:
    - show
    - "--help"
---
success: true
exit_code: 0
----- stdout -----
List installed and active toolchains

Usage: moonup list [OPTIONS]

Options:
  -v, --verbose...  Increase logging verbosity
  -q, --quiet...    Decrease logging verbosity
  -h, --help        Print help

----- stderr -----
