tests/integration/snapshots/test__integration__cli_interface__update.snap
---
source: tests/integration/cli_interface.rs
info:
  program: moonup
  args:
    - update
    - "--help"
---
success: true
exit_code: 0
----- stdout -----
Update MoonBit latest toolchain and moonup

Usage: moonup update [OPTIONS]

Options:
      --no-self-update  Don't perform self update when running `moonup update`
  -v, --verbose...      Increase logging verbosity
  -q, --quiet...        Decrease logging verbosity
  -h, --help            Print help

----- stderr -----
