tests/integration/snapshots/test__integration__cli_interface__update_alias.snap
---
source: tests/integration/cli_interface.rs
info:
  program: moonup
  args:
    - u
    - "--help"
---
success: true
exit_code: 0
----- stdout -----
Update MoonBit toolchains

Usage: moonup update [OPTIONS]

Options:
  -v, --verbose...  Increase logging verbosity
  -q, --quiet...    Decrease logging verbosity
  -h, --help        Print help

----- stderr -----
